0.5.0 (trunk):
* Force `-j-std` to ATDgen to always use standards-compliant JSON (#11)
* Rename `Github.Issues` to `Github.Issue` to parallel other submodules
* Rename `Github.Issue.edit` to `Github.Issue.update` to parallel other CRUD interfaces
* Add Pull Request API
* Add Hook API (generic "web" hooks only)
* Add Statuses API
* Add structured semantic errors

0.4.3 (2013-01-14):
* Add filters and sort order parameters for `Issues` and `Milestones` for a repository.

0.4.2 (2012-12-29):
* Add a `redirect_uri` option to `URI.authorize`, to permit the redirection URL to be parameterizable.
* Add `User.current_info` and `User.info` to retrieve information about the logged in user, or a public one.
* Add `Issues.edit` to patch an existing issue.
* Correct the type of `Issues.milestone` to be an integer.
* `Issues.labels` is now a `string list`, instead of a `string list option` (with the empty list denoting `None`).

0.4.1 (2012-12-27):
* Add `Github.Issues.comments` to retrieve issue comments, and an `issue_comment`
  type in the ATD specification for the returned value.
* Add `Github.Issues.create_comment` to add a new issue comment.
* Expose the `milestone` field for an issue.
* Create a default `lib_test/config.ml` if one doesnt exist (from the template
  in `lib_test/config.ml.in`.

0.4.0 (2012-12-25):
* Add a `git-jar` command which provides a convenient command-line interface
  to list, create and save tokens.
* Add a `github.unix` subpackage which provides a `Github_cookie_jar` module
  which saves tokens in `~/.github` for other applications to query if
  they use the Github API.
* Complete the auth API, and rename functions slightly for consistency. We now
  have `Token.get_all` and `Token.get` to retrieve auth information, and
 `Token.create` for constructing them. The API also includes support for adding
  notes and URLs, which are stored on the Github side.

0.3.3 (2012-12-18):
* Add `Repo.info` to retrieve repository metadata.

0.3.2 (2012-12-14):